# small-cap-stocks

./: .gitignore  README.md
backend/: .gitignore  database.sexp  dune-project
backend/src/: collect_company_info.ml  collect_company_info.mli  database.ml  database.mli  dune  fetcher.ml  fetcher.mli  parse_to_stock.ml  parse_to_stock.mli  parser.ml  parser.mli  portfolio.ml  portfolio.mli  server.ml  server.mli  small_cap_prototype.mli  small_cap_stocks.ml  small_cap_stocks.mli  stock.ml  stock.mli  user.ml  user.mli  web_scraper.ml  web_scraper.mli
backend/test/: dune
frontend/: README.md  db.json  package-lock.json  package.json
frontend/src/: App.jsx  index.jsx  portfolio.js
frontend/src/api/: getStockInfo.js  getStocks.js
frontend/src/components/: Analysis.jsx  Filter.jsx  Stock.jsx  StockFinancials.jsx  StockIndicator1.jsx  StockIndicator2.jsx  StockInfo.jsx  StockTable.jsx  Title.jsx
frontend/src/pages/: Home.jsx  StockPage.jsx
js-backend/: app.js  package-lock.json  package.json
js-backend/routes/: fetchStocks.js
